--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: python
 python:
 - '3.3'
+before_install:
+  - wget http://repo1.maven.org/maven2/org/codehaus/sonar/runner/sonar-runner-dist/2.4/sonar-runner-dist-2.4.zip
+- unzip sonar-runner-dist-2.4.zip 
+
 branches:
   only:
   - master
@@ -20,3 +24,9 @@ deploy:
   on:
     repo: paulossjunior/ledszeppellin
     all_branches: true
+
+after_script:
+  - ./sonar-runner-2.4/bin/sonar-runner
+  - docker-compose down
+notifications:
+slack: leds:ecBlZedCK8tpP1X5uygKMS8q
