--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,11 @@ script:
   - cd wsgi/myproject
   - python manage.py behave
 
+after_script:
+  - wget http://repo1.maven.org/maven2/org/codehaus/sonar/runner/sonar-runner-dist/2.4/sonar-runner-dist-2.4.zip
+  - unzip sonar-runner-dist-2.4.zip 
+  - ./sonar-runner-2.4/bin/sonar-runner
+
 deploy:
   provider: openshift
   user: paulossjunior@gmail.com
@@ -29,8 +34,6 @@ deploy:
     repo: paulossjunior/ledszeppellin
     all_branches: true
 
-after_script:
-  - ./sonar-runner-2.4/bin/sonar-runner
 
 notifications:
   slack: leds:ecBlZedCK8tpP1X5uygKMS8q
