--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.projectVersion=1.5
 sonar.sources=wsgi
 sonar.language=py
 sonar.sourceEncoding=UTF-8
-sonar.host.url=https://sonarqube.com
-sonar.login=d695155e0f9a075d9f3c42df899cd501bf096ede
+sonar.host.url= https://sonarqube.com/
+sonar.login= d695155e0f9a075d9f3c42df899cd501bf096ede
