--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,9 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - cd wsgi/myproject
-  - python manage.py behave
+  - python ./wsgi/project/manage.py behave
 
 after_script:
-  - wget http://repo1.maven.org/maven2/org/codehaus/sonar/runner/sonar-runner-dist/2.4/sonar-runner-dist-2.4.zip
-  - unzip sonar-runner-dist-2.4.zip 
   - ./sonar-runner-2.4/bin/sonar-runner
 
 deploy:
