--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - python ./wsgi/project/manage.py behave
+  - python wsgi/project/manage.py behave
 
 after_script:
   - ./sonar-runner-2.4/bin/sonar-runner
