--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ install: true
 jdk:
   - oraclejdk8
   
-addons:
-  sonarqube: true
+#addons:
+# sonarqube: true
   
 env:
   global:
@@ -26,7 +26,8 @@ install:
 script:
   - cd wsgi/myproject
   - python manage.py behave
-  - sonar-scanner -Dsonar.login=$SONAR_TOKEN 
+  - ./runSonarQubeAnalysis.sh
+#  - sonar-scanner -Dsonar.login=$SONAR_TOKEN 
   
 cache:
   directories:
