--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: python
 python:
   - '3.3'
-
 sudo: false
-install: true
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+  sonarqube: true
 
-jdk:
-  - oraclejdk8
-  
-#addons:
-# sonarqube: true
+ 
   
 env:
   global:
