--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,16 @@ branches:
 install:
   - pip install -r requirements.txt
 
+before_install:
+    - rm -rf ~/.linuxbrew
+    - yes | ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/linuxbrew/go/install)"
+    - export PATH="$HOME/.linuxbrew/bin:$PATH"
+    - export MANPATH="$HOME/.linuxbrew/share/man:$MANPATH"
+    - export INFOPATH="$HOME/.linuxbrew/share/info:$INFOPATH"
+    - brew install jdk
+    - export JAVA_HOME=/home/travis/.linuxbrew/Cellar/jdk/1.8.0-40
+
+
 script:
   - cd wsgi/myproject
   - python manage.py behave
