--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
-sonar.projectKey=ledszeppellin-exemplo
-sonar.projectName=ledszeppellin-exemplo
-sonar.projectVersion=1.5
-sonar.sources=wsgi
+sonar.projectKey = ledszeppellin-exemplo
+sonar.projectName = ledszeppellin-exemplo
+sonar.projectVersion = 1.5
+sonar.sources = wsgi
 sonar.language=py
 sonar.sourceEncoding=UTF-8
 sonar.host.url= https://sonarqube.com
