--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey = ledszeppellin-exemplo
-sonar.projectName = ledszeppellin-exemplo
+sonar.projectKey = gde 
+sonar.projectName = gde
 sonar.projectVersion = 1.5
 sonar.sources = wsgi
 sonar.language=py
