--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
  - python manage.py behave
  - cd ..
  - cd ..
- - sonar-scanner -Dsonar.login=$SONAR_TOKEN
+# - sonar-scanner -Dsonar.login=$SONAR_TOKEN
 
 deploy:
   provider: openshift
